WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160435
Freeze another bunch of Objective-C binding files
https://bugs.webkit.org/show_bug.cgi?id=160435
Summary
Freeze another bunch of Objective-C binding files
Anders Carlsson
Reported
2016-08-01 17:33:12 PDT
Freeze another bunch of Objective-C binding files
Attachments
Patch
(111.97 KB, patch)
2016-08-01 17:35 PDT
,
Anders Carlsson
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-08-01 17:35:00 PDT
Created
attachment 285056
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-01 17:37:19 PDT
Attachment 285056
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/objc/DOMRange.h:26: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:37: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:38: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:39: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:40: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:41: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:42: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:43: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.h:44: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMStyleSheet.mm:29: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.mm:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMRange.mm:36: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMTreeWalker.mm:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMTreeWalker.mm:37: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:32: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:33: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:34: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:35: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:36: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:37: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:38: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:39: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:40: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.h:41: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMMediaList.mm:29: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.mm:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathResult.mm:38: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeIterator.mm:29: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:31: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:32: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:33: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:34: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:35: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:36: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:37: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:38: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:39: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:40: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:41: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:42: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:43: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:44: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:45: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMNodeFilter.h:46: enum members should use InterCaps with an initial capital letter or initial 'k' for C-style enums. [readability/enum_casing] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathExpression.mm:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMXPathExpression.mm:38: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMStyleSheetList.mm:29: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 48 in 32 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2016-08-02 10:43:47 PDT
Committed
r204031
: <
http://trac.webkit.org/changeset/204031
>
Csaba Osztrogonác
Comment 4
2016-08-03 02:15:06 PDT
It broke the Apple Mac cmake build: Public API change. There are missing public properties and/or methods from the "DOMHTMLOptionsCollection" class. - (void)remove:(unsigned)index; Died at /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebCore/bindings/scripts/CodeGeneratorObjC.pm line 388.
Csaba Osztrogonác
Comment 5
2016-08-03 02:18:21 PDT
(In reply to
comment #4
)
> It broke the Apple Mac cmake build: > > Public API change. There are missing public properties and/or methods from > the "DOMHTMLOptionsCollection" class. > - (void)remove:(unsigned)index; > Died at > /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebCore/bindings/ > scripts/CodeGeneratorObjC.pm line 388.
It seems
https://trac.webkit.org/changeset/204040
wasn't enough to fix the build.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug