Freeze another bunch of Objective-C binding files https://bugs.webkit.org/show_bug.cgi?id=160435

Reviewed by Alex Christensen.

* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:
* bindings/objc/DOMAbstractView.h: Added.
* bindings/objc/DOMAbstractView.mm:
* bindings/objc/DOMAbstractViewInternal.h: Added.
* bindings/objc/DOMMediaList.h: Added.
* bindings/objc/DOMMediaList.mm: Added.
* bindings/objc/DOMMediaListInternal.h: Added.
* bindings/objc/DOMNodeFilter.h: Added.
* bindings/objc/DOMNodeIterator.h: Added.
* bindings/objc/DOMNodeIterator.mm: Added.
* bindings/objc/DOMNodeIteratorInternal.h: Added.
* bindings/objc/DOMRange.h: Added.
* bindings/objc/DOMRange.mm: Added.
* bindings/objc/DOMRangeInternal.h: Added.
* bindings/objc/DOMStyleSheet.h: Added.
* bindings/objc/DOMStyleSheet.mm: Added.
* bindings/objc/DOMStyleSheetInternal.h: Added.
* bindings/objc/DOMStyleSheetList.h: Added.
* bindings/objc/DOMStyleSheetList.mm: Added.
* bindings/objc/DOMStyleSheetListInternal.h: Added.
* bindings/objc/DOMTreeWalker.h: Added.
* bindings/objc/DOMTreeWalker.mm: Added.
* bindings/objc/DOMTreeWalkerInternal.h: Added.
* bindings/objc/DOMXPathExpression.h: Added.
* bindings/objc/DOMXPathExpression.mm: Added.
* bindings/objc/DOMXPathExpressionInternal.h: Added.
* bindings/objc/DOMXPathNSResolver.h: Added.
* bindings/objc/DOMXPathResult.h: Added.
* bindings/objc/DOMXPathResult.mm: Added.
* bindings/objc/DOMXPathResultInternal.h: Added.

Canonical link: https://commits.webkit.org/178595@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204031 268f45cc-cd09-0410-ab3c-d52691b4dbfc